Revision history for Syntax-Construct

1.020   2021-05-24
        - Fix perldelta links
        - Add "method-on-any-string" for 5.018
        - Improve doc and error messages

1.019   2021-05-24
        - Perl 5.34 was released
        - pack byte order modifiers added to 5.010

1.018   2020-07-05
        - Better links in perldelta

1.017   2020-07-05
        - Perl 5.32 was released

1.016   2020-01-12
        - Fix MANIFEST.SKIP and the related test
        - Two aliases added: unicode-12.1 and list-context-state
          (thanks Branislav Zahradnik)

1.015   2020-01-04
        - Links fixed after 5.30.1 release (thanks Mohammad S Anwar)

1.014   2019-06-20
        - Correctly skip tests of turkic casing

1.013   2019-06-18

        - Rework tests
        - Turkic casing only works if the underlying OS supports it

1.012   2019-06-11

        - Fix broken link to perl5220delta

1.011   2019-06-09

        - Fix link to documentation of for-qw

1.010   2019-06-09

        - Add @_=split
        - Add prototype+ (thanks Chris White)
        - Fix the version of the removal of for-qw, it was removed in
          5.18, 5.14 was just its deprecation
        - Improve tests: test that removed constructs don't work in
          later versions

1.009   2019-06-07

        - Perl 5.30 was released
        - Test that constructs return a wrong value in older versions,
          add a flag for tests that fail only sometimes
        - Fix missing or wrong tests

1.008   2018-09-26

        - Fix links to 5.26 delta
        - Add aliases (thanks Branislav Zahradnik)

1.007   2018-06-26

        - Workaround threaded 5.10.0 throwing "Modification of a
          read-only value attemted" for eval '?x?'
        - Unicode delimiters hack doesn't work in 5.8.0

1.006   2018-06-25

        - Fix tests for 5.8.X

1.005   2018-06-25

        - Perl 5.28
        - Fix version check (for older Perls).
        - Added ?? and for-qw to removed constructs.