@@ -3,6 +3,7 @@ Revision history for Syntax-Construct
 1.020   2021-05-24
         - Fix perldelta links
         - Add "method-on-any-string" for 5.018
+        - Add "RE_COMPILE_RECURSION_LIMIT" for 5.030
         - Improve doc and error messages
 
 1.019   2021-05-24
